# workshop_3_DW

./: .gitignore  README.md  pyproject.toml
backend/: start.py
backend/contracts/: schema.py
backend/datasource/: api.py
backend/fakeapi/: start.py
