[tool.poetry]
name = "workshop-3-dw"
version = "0.1.0"
description = "Projeto referente ao Workshop 3 de 2023 de Como construir um DW sem pagar muito"
authors = ["Joao Pedro Santos <jpedro.csantos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
faker = "^25.0.1"
pandas = "^2.2.2"
requests = "^2.31.0"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python -m uvicorn backend.fakeapi.start:app --reload"
test = "poetry run pytest -v"